ssup2ket-auth/base/debezium_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssup2ket-auth-debezium-deployment
  labels:
    app: ssup2ket-auth-debezium
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ssup2ket-auth-debezium
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: '/'
        prometheus.io/port: '9005'
      labels:
        app: ssup2ket-auth-debezium
    spec:
      volumes:
      - name: opt-prometheus
        emptyDir: {}
      - name: configmap
        configMap:
          name: ssup2ket-auth-debezium-configmap
          defaultMode: 0744
      containers:
      - name: debezium-connector
        image: debezium/connect:1.6.2.Final
        volumeMounts:
        - mountPath: /etc/debezium/connector.json
          name: configmap
          subPath: connector.json
        - mountPath: /etc/jmx_exporter/jmx_exporter.yaml
          name: configmap
          subPath: jmx_exporter.yaml
        - mountPath: /health.sh
          name: configmap
          subPath: health.sh
        - mountPath: /kafka/config/log4j.properties
          name: configmap
          subPath: log4j.properties
        - mountPath: /opt/prometheus
          name: opt-prometheus
