ssup2ket-auth/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ssup2ket-auth-service
spec:
  selector:
    app: ssup2ket-auth
  ports:
  - protocol: TCP
    port: 80
    name: http
    targetPort: 80
  - protocol: TCP
    port: 9090
    name: grpc
    targetPort: 9090
  - protocol: TCP
    port: 9100
    name: grpc-ext
    targetPort: 9090
