ssup2ket-auth/base/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ssup2ket-auth-gateway
