ssup2ket-auth/base/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ssup2ket-auth-virtualservice
